// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ actions 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Header-sc-187vqjx-0 lmKpnW"
  >
    <div
      class="Cardstyles__Title-sc-187vqjx-1 kUbeAs"
    >
      <h5
        class="Headingstyles__Box-sc-16udop9-0 fjHjeT"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
    <div
      class="Cardstyles__Actions-sc-187vqjx-2 iaiege"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M22 13h-1.312a8.659 8.659 0 01-.664 2.473l1.136.656-1 1.732-1.143-.661a8.816 8.816 0 01-1.817 1.817l.666 1.143-1.732 1-.656-1.136a8.693 8.693 0 01-2.478.665V22h-2v-1.311a8.708 8.708 0 01-2.479-.67l-.655 1.136-1.732-1 .66-1.143A8.811 8.811 0 014.983 17.2l-1.143.666-1-1.732 1.136-.656A8.693 8.693 0 013.311 13H2v-2h1.311c.098-.854.322-1.69.665-2.478L2.84 7.866l1-1.732 1.143.66a8.831 8.831 0 011.811-1.811l-.66-1.143 1.732-1 .655 1.136A8.708 8.708 0 0111 3.311V2h2v1.311a8.693 8.693 0 012.473.665l.656-1.136 1.732 1-.661 1.143a8.836 8.836 0 011.817 1.811l1.143-.66 1 1.732-1.136.656c.343.788.567 1.624.664 2.478H22v2zm-10 6a7.008 7.008 0 007-7 7 7 0 10-7 7zm0-10.9a3.9 3.9 0 110 7.8 3.9 3.9 0 010-7.8zm0 6a2.1 2.1 0 100-4.2 2.1 2.1 0 000 4.2z"
        />
      </svg>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ any props 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC className"
  id="id"
>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ content title 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    <div
      class="Cardstyles__ContentTitle-sc-187vqjx-6 lqFCB"
    >
      Section header
    </div>
    <div>
      Section 1
    </div>
    <div
      class="Cardstyles__ContentTitle-sc-187vqjx-6 lqFCB"
    >
      Section header
    </div>
    <div>
      Section2
    </div>
  </div>
</div>
`;

exports[`Card w/ footer 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
  <div
    class="Cardstyles__Footer-sc-187vqjx-4 iFsYOy"
  >
    Card footer
  </div>
</div>
`;

exports[`Card w/ header 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Header-sc-187vqjx-0 lmKpnW"
  >
    <div
      class="Cardstyles__Title-sc-187vqjx-1 kUbeAs"
    >
      <h5
        class="Headingstyles__Box-sc-16udop9-0 fjHjeT"
        color="brand-primary"
      >
        Card title
      </h5>
      <div
        class="Cardstyles__Subtitle-sc-187vqjx-5 iXsFQk"
      >
        Card subtitle
      </div>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ stretch 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 bFPQsB"
>
  <div
    class="Cardstyles__Header-sc-187vqjx-0 lmKpnW"
  >
    <div
      class="Cardstyles__Title-sc-187vqjx-1 kUbeAs"
    >
      <h5
        class="Headingstyles__Box-sc-16udop9-0 fjHjeT"
        color="brand-primary"
      >
        Simple card
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ titile 1`] = `
<div
  class="Cardstyles__Box-sc-187vqjx-7 jQDfoC"
>
  <div
    class="Cardstyles__Header-sc-187vqjx-0 lmKpnW"
  >
    <div
      class="Cardstyles__Title-sc-187vqjx-1 kUbeAs"
    >
      <h5
        class="Headingstyles__Box-sc-16udop9-0 fjHjeT"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-187vqjx-3 ijlvdi"
  >
    Card content
  </div>
</div>
`;
